--- a/Shaking/res/layout/activity_select.xml
+++ b/Shaking/res/layout/activity_select.xml
@@ -5,10 +5,33 @@
     android:orientation="vertical" >
 
     <TextView
-        android:id="@+id/textView1"
+        android:id="@+id/select_selectPlaceTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Select Activity"
-        android:textAppearance="?android:attr/textAppearanceLarge" />
+        android:layout_gravity="center_horizontal"
+        android:layout_marginTop="20dp"
+        android:text="@string/select_select_a_position"
+        android:textSize="20sp" />
+
+    <Button
+        android:id="@+id/select_handTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/select_hand" />
+
+    <Button
+        android:id="@+id/select_legTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/select_leg" />
+
+    <Button
+        android:id="@+id/select_bodyTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="@string/select_body" />
 
 </LinearLayout>
