--- a/Shaking/res/values/styles.xml
+++ b/Shaking/res/values/styles.xml
@@ -17,12 +17,17 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
     
-    <style name="smsDialog" parent="@android:Theme.Holo.Light.Dialog">
+    <style name="DialogTheme" parent="@android:Theme.Holo.Light.Dialog">
         <item name="android:windowFrame">@null</item>
         <item name="android:windowNoTitle">true</item> 
         <item name="android:windowBackground">@android:color/holo_orange_light</item>
         <item name="android:windowIsFloating">true</item>
         <item name="android:windowContentOverlay">@null</item>
+    </style>
+    
+     <style name="DialogAnimation">
+        <item name="android:windowEnterAnimation">@anim/animation_dialog_shake</item>
+        <item name="android:windowExitAnimation">@anim/animation_dialog_fade_out</item>
     </style>
 
 </resources>
