[UI] Add UI icon

--- a/Shaking/res/layout/activity_hand_sport.xml
+++ b/Shaking/res/layout/activity_hand_sport.xml
@@ -3,10 +3,18 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
-    
-      <com.google.android.youtube.player.YouTubePlayerView
-      android:id="@+id/handSport_youtubeView"
-      android:layout_width="match_parent"
-      android:layout_height="wrap_content"/>
+
+    <com.google.android.youtube.player.YouTubePlayerView
+        android:id="@+id/handSport_youtubeView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
+    <ImageView
+        android:id="@+id/handSport_shakingAnimImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="20dp"
+        android:background="@drawable/animation_shaking_sports" />
 
 </LinearLayout>
