--- a/Shaking/res/layout/activity_main.xml
+++ b/Shaking/res/layout/activity_main.xml
@@ -5,8 +5,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin"
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.nptu.dse.shaking.main.MainActivity" >
+    android:paddingTop="@dimen/activity_vertical_margin" >
 
     <TextView
         android:id="@+id/main_countDownTitleTextView"
@@ -29,39 +28,42 @@
 
     <LinearLayout
         android:id="@+id/main_buttonLayout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@+id/main_countDownTimerTextView"
         android:layout_centerHorizontal="true"
-        android:orientation="horizontal"
-        android:paddingBottom="@dimen/activity_vertical_margin"
-        android:paddingLeft="@dimen/activity_horizontal_margin"
-        android:paddingRight="@dimen/activity_horizontal_margin"
-        android:paddingTop="@dimen/activity_vertical_margin" >
+        android:layout_marginBottom="@dimen/activity_vertical_margin"
+        android:layout_marginTop="@dimen/activity_vertical_margin"
+        android:gravity="center"
+        android:orientation="horizontal" >
 
         <Button
             android:id="@+id/main_setAlarmButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_set_alarm"
-            android:textSize="20sp" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:background="@drawable/main_set_alarm_button" />
 
         <Button
             android:id="@+id/main_cancelAlarmButton"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/main_cancel_alarm"
-            android:textSize="20sp" />
+            android:layout_width="100dp"
+            android:layout_height="100dp"
+            android:layout_marginLeft="@dimen/activity_horizontal_margin"
+            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:background="@drawable/main_cancel_alarm_button" />
     </LinearLayout>
 
     <Button
         android:id="@+id/main_shakeNowButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="60dp"
         android:layout_below="@+id/main_buttonLayout"
         android:layout_centerHorizontal="true"
-        android:text="@string/main_shake_now"
-        android:textSize="20sp" />
+        android:background="@drawable/main_go_button"
+        android:text="@string/main_go"
+        android:textColor="@android:color/white"
+        android:textSize="30sp" />
 
     <ListView
         android:id="@+id/main_alarmListView"
