--- a/Shaking/res/layout/activity_select_video.xml
+++ b/Shaking/res/layout/activity_select_video.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical" >
 
+    <!--
     <TextView
         android:id="@+id/select_selectPlaceTextView"
         android:layout_width="wrap_content"
@@ -33,5 +34,45 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
         android:text="@string/select_body" />
+    -->
 
-</LinearLayout>
+    <ImageView
+        android:id="@+id/select_childWaistImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:src="@drawable/ic_child_waist_black" />
+
+    <ImageView
+        android:id="@+id/select_childLeftHandImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toLeftOf="@+id/select_childWaistImageView"
+        android:src="@drawable/ic_child_left_hand_black" />
+
+    <ImageView
+        android:id="@+id/select_childRightHandImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:layout_toRightOf="@+id/select_childWaistImageView"
+        android:src="@drawable/ic_child_right_hand_black" />
+
+    <ImageView
+        android:id="@+id/select_childFootImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignRight="@+id/select_childRightHandImageView"
+        android:layout_below="@+id/select_childWaistImageView"
+        android:src="@drawable/ic_child_foot_black" />
+
+    <ImageView
+        android:id="@+id/select_childHeadImageView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@+id/select_childWaistImageView"
+        android:layout_alignLeft="@+id/select_childLeftHandImageView"
+        android:src="@drawable/ic_child_head_black" />
+
+</RelativeLayout>
