--- a/Shaking/res/layout/activity_animation_dialog.xml
+++ b/Shaking/res/layout/activity_animation_dialog.xml
@@ -2,16 +2,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent"
+    android:background="@drawable/animation_dialog_background"
     android:orientation="vertical" >
 
     <ImageView
         android:id="@+id/animationDialog_sportAnimationImageView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="180dp"
+        android:layout_height="350dp"
         android:layout_gravity="center"
         android:layout_margin="10dp"
-        android:background="@drawable/animation_shaking_sports"/>
+        android:background="@drawable/animation_shaking_sports" />
 
     <Button
         android:id="@+id/animationDialog_exerciseButton"
@@ -19,6 +19,8 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:background="@drawable/dialog_orange_button"
-        android:text="@string/alarm_dialog_do_some_exercise" />
+        android:text="@string/alarm_dialog_do_some_exercise"
+                android:layout_marginBottom="10dp"
+         />
 
 </LinearLayout>
