--- a/Shaking/res/layout/activity_animation_dialog.xml
+++ b/Shaking/res/layout/activity_animation_dialog.xml
@@ -18,9 +18,9 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/dialog_orange_button"
-        android:text="@string/alarm_dialog_do_some_exercise"
-                android:layout_marginBottom="10dp"
-         />
+        android:text="@string/alarm_dialog_exercise"
+        android:textSize="40sp" />
 
 </LinearLayout>
