--- a/Shaking/res/drawable/animation_dialog_background.xml
+++ b/Shaking/res/drawable/animation_dialog_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" >
-    <stroke android:width="5dp" android:color="@android:color/holo_orange_light" />
-	<solid android:color="@android:color/white"/>
+    <stroke android:width="5dp" android:color="@android:color/background_dark" />
+	<gradient android:startColor="@android:color/holo_orange_light" android:centerColor="@android:color/white" android:endColor="@android:color/holo_orange_light" android:angle="225"/>
 </shape>
