--- a/Shaking/res/layout/activity_animation_dialog.xml
+++ b/Shaking/res/layout/activity_animation_dialog.xml
@@ -21,6 +21,7 @@
         android:layout_marginBottom="10dp"
         android:background="@drawable/dialog_orange_button"
         android:text="@string/alarm_dialog_exercise"
-        android:textSize="40sp" />
+        android:textSize="40sp"
+        android:textColor="@android:color/white" />
 
 </LinearLayout>
