--- a/Shaking/res/layout/activity_main.xml
+++ b/Shaking/res/layout/activity_main.xml
@@ -39,18 +39,18 @@
 
         <Button
             android:id="@+id/main_setAlarmButton"
-            android:layout_width="100dp"
+            android:layout_width="110dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/main_set_alarm_button" />
 
         <Button
             android:id="@+id/main_cancelAlarmButton"
             android:layout_width="100dp"
             android:layout_height="100dp"
-            android:layout_marginLeft="@dimen/activity_horizontal_margin"
-            android:layout_marginRight="@dimen/activity_horizontal_margin"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
             android:background="@drawable/main_cancel_alarm_button" />
     </LinearLayout>
 
